--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -7,4 +7,4 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[LO] %d{yyyy-MM-dd HH:mm:ss,SSS} %p [%t] %C.%M :: %m%n
 
 # Special log package or class
-#log4j.logger.com.arthur=ERROR
+#log4j.logger.com.kyiaRROR
