--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="jgatracker" default="deploy" basedir=".">
+
 	<property name="version" value="0.1" />
 	<property name="src" value="${basedir}/src" />
 	<property name="build" value="${basedir}/build" />
@@ -8,13 +9,11 @@
 	<property name="jar-file" value="${build}/${ant.project.name}-${version}.jar" />
 	<property name="jar-source-file" value="${build}/${ant.project.name}-source-${version}.jar" />
 	<property name="deploy" value="${basedir}/target" />
-	
-    <!--======================== JAR FILE LOCATIONS ================== -->
+
 	<path id="server.classpath">
-		<fileset dir="${lib}" includesfile="*.jar" />
+		<fileset dir="${lib}" includes="*.jar" />
 	</path>
 
-	<!--=========================== TARGETS ========================== -->
 	<target name="clean">
 		<delete dir="${build}" />
 		<delete dir="${deploy}" />
@@ -28,13 +27,6 @@
 
 	<target name="compile" depends="prepare">
 		<javac srcdir="${src}" source="1.6" target="1.6"  destdir="${classes}" classpathref="server.classpath" includeAntRuntime="false" />
-		<!--
-		<iajc debug="true" destdir="${classes}" source="1.6" classpathRef="server.classpath">
-			<sourceroots>
-				<pathelement location="${src}" />
-			</sourceroots>
-		</iajc>
-		-->
 	</target>
 
 	<target name="jar" depends="compile">
@@ -45,4 +37,5 @@
 	<target name="deploy" depends="jar">
 		<copy file="${jar-file}" todir="${deploy}" />
 	</target>
+
 </project>
