--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.arthurcn</groupId>
-    <artifactId>JGATracker</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>jgatracker</artifactId>
+    <version>0.1-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
